<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblTipPerc">Tip %</string>
    <string name="lblNoPeople"># of people</string>
    <string name="btnCalc">Calculate</string>
    <string name="btnCleat">Clear</string>
    <string name="chkHst">Add HST</string>
    <string name="txtAmountHint">Enter Amount</string>
    <string name="txtOtherTipHint">Enter Tip %</string>
    <string-array name="tips">
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>other</item>
    </string-array>
    <string-array name="numPeople">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
